--- a/git.html
+++ b/git.html
@@ -6,6 +6,6 @@
 </head>
 </body>
   <h1>깃 연습</h1>
-  <p><b>branch</b> 의 사용방법에 대해 알아봅시다</p>
+  <p><b>conflict</b> 의 사용방법에 대해 알아봅시다</p>
 </body>
 </html>
