--- a/git.html
+++ b/git.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>깃 연습</title>
-  <link rel\"stylesheet" href="./git.css"/>
-</head>
-</body>
-  <h1>깃 연습</h1>
-  <p><b>conflict</b> 의 사용방법에 대해 알아봅시다</p>
-</body>
+	<head>
+		<title>HTML Doc's title.</title>
+	</head>
+	<body">
+		<h1>It's writen by h1  </h1>			
+		<p>Let's use 'q'! </p>
+		<q> It's writen by 'q'!</q>	
+		<p>Let's use 'b'! <br>
+		<q> <b>It</b>'s writen by 'b'!</q>
+		<p>Let's use 'blockquoto'!
+		<blockquote style = "color:white"> I'm using blockquoto' I'm using 'blockquoto' I'm using 'blockquoto' I'm using 'blockquoto' I'm using 'blockquoto' I'm using 'blockquoto'</blockquote>
+		</p>
+
+		
+		<h4> <a href="link1.html" target="_self"> link1 </a></h4>
+		<iframe src="link1.html" style="width:50%; height:100px">
+		</iframe>
+		<form action = "search1.html">
+			Search:
+			<input type = "text" name = "search">
+		</form>
+	</body>
 </html>
